--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
             "email": "alanvdb.coder@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "doctrine/orm": "^3.2",
+        "doctrine/dbal": "^4.1",
+        "symfony/cache": "^7.1"
+    }
 }
